# CMake_Hello

./: CMakeLists.txt  hello_world.cpp  main.cpp
hello-exe/: CMakeLists.txt  main.cpp
say_hello/: CMakeLists.txt
say_hello/src/say_hello/: hello_world.cpp  hello_world.h
test/: CMakeLists.txt  test_hello_world.cpp
